--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
             cursor: pointer; /* Cambiar cursor al pasar sobre el botón */
             margin: 5px; /* Espacio alrededor del botón */
         }
+        .column-title {
+            text-align: center; /* Centrar el texto del título de la columna */
+            font-weight: bold; /* Negrita para el título */
+            margin-bottom: 10px; /* Espacio debajo del título */
+            color: #333; /* Color del texto */
+        }
     </style>
 </head>
 <body>
@@ -115,11 +121,12 @@
 
         <div class="container">
             <!-- Primer grupo -->
+            <div class="column-title">ENFOQUE CLASICO</div>
             <div class="card-group">
                 <div class="card">
                     <img src="adm/taylor.jpg" alt="Frederick Taylor"> <!-- Cambia esta ruta por la de la imagen del autor -->
                     <div class="card-content">
-                        <h4>Frederick Taylor (1856-1915)</h4>
+                        <h4>ADMINISTRACION CIENTIFICA</h4>
                         <p><strong>Concepto:</strong> Se basa en la racionalización del trabajo para aumentar la eficiencia y la productividad mediante métodos científicos.</p>
                         <p><strong>Teoría:</strong><br>
                         - Planificación: Uso de procedimientos científicos en lugar de improvisación.<br>
@@ -132,7 +139,7 @@
                 <div class="card">
                     <img src="adm/fayol.jpg" alt="Henri Fayol"> <!-- Cambia esta ruta por la de la imagen del autor -->
                     <div class="card-content">
-                        <h4>Henri Fayol (1841-1925)</h4>
+                        <h4>TEORIA DEL PROCESO ADMINISTRATIVO</h4>
                         <p><strong>Concepto:</strong> La administración es un proceso basado en principios generales aplicables a cualquier organización.</p>
                         <p><strong>Teoría:</strong><br>
                         14 principios administrativos, entre ellos: División del trabajo, Autoridad, Unidad de mando, Jerarquía y Coordinación.</p>
@@ -144,7 +151,7 @@
                 <div class="card">
                     <img src="adm/weber.jpg" alt="Max Weber"> <!-- Cambia esta ruta por la de la imagen del autor -->
                     <div class="card-content">
-                        <h4>Max Weber (1864-1920)</h4>
+                        <h4>TEORIA BUROCRATICA</h4>
                         <p><strong>Concepto:</strong> Plantea la burocracia como una estructura organizacional basada en normas, jerarquía y división del trabajo.</p>
                         <p><strong>Teoría:</strong><br>
                         3 tipos de autoridad:<br>
@@ -159,12 +166,12 @@
 
         <div class="container">
             <!-- Segundo grupo -->
+            <div class="column-title">ENFOQUE DEL COMPORTAMIENTO</div>
             <div class="card-group">
-                <div class="column-title">ENFOQUE DEL COMPORTAMIENTO</div>
                 <div class="card">
                     <img src="adm/mayo.jpg" alt="Elton Mayo"> <!-- Cambia esta ruta por la de la imagen del autor -->
                     <div class="card-content">
-                        <h4>Elton Mayo (1880-1949)</h4>
+                        <h4>RELACIONES HUMANAS</h4>
                         <p><strong>Concepto:</strong> Introduce la importancia de los factores sociales y psicológicos en la productividad.</p>
                         <p><strong>Teoría:</strong><br>
                         Estudios de Hawthorne: Motivación influenciada por relaciones humanas y condiciones sociales.</p>
@@ -174,7 +181,7 @@
                 <div class="card">
                     <img src="adm/maslow.jpg" alt="Abraham Maslow"> <!-- Cambia esta ruta por la de la imagen del autor -->
                     <div class="card-content">
-                        <h4>Abraham Maslow (1908-1970)</h4>
+                        <h4>TEORIA DE LA MOTIVACION</h4>
                         <p><strong>Concepto:</strong> La motivación se basa en una jerarquía de necesidades humanas.</p>
                         <p><strong>Teoría:</strong><br>
                         Pirámide de Maslow: Fisiológicas, Seguridad, Sociales, Estima y Autorrealización.</p>
@@ -186,12 +193,12 @@
 
         <div class="container">
             <!-- Tercer grupo -->
+            <div class="column-title">ENFOQUE MODERNO</div>
             <div class="card-group">
-                <div class="column-title">ENFOQUE MODERNO</div>
                 <div class="card">
                     <img src="adm/von.jpg" alt="Ludwig von Bertalanffy"> <!-- Cambia esta ruta por la de la imagen del autor -->
                     <div class="card-content">
-                        <h4>Ludwig von Bertalanffy (1901-1972)</h4>
+                        <h4>ENFOQUE DE SISTEMAS</h4>
                         <p><strong>Concepto:</strong> La organización es un sistema abierto que interactúa con su entorno.</p>
                         <p><strong>Teoría:</strong><br>
                         Elementos del sistema: Entrada, Proceso, Salida, Retroalimentación y Ambiente.</p>
@@ -201,7 +208,7 @@
                 <div class="card">
                     <img src="adm/contingencial.jpg" alt="Enfoque Contingencial"> <!-- Cambia esta ruta por la de la imagen del autor -->
                     <div class="card-content">
-                        <h4>Enfoque Contingencial</h4>
+                        <h4>ENFOQUE CONTINGENCIAL</h4>
                         <p><strong>Autor:</strong> Paul Lawrence, Jay Lorsch, Joan Woodward.</p>
                         <p><strong>Concepto:</strong> No hay una única forma de administrar; la estructura debe adaptarse al contexto.</p>
                         <p><strong>Teoría:</strong><br>
