--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
             padding: 2px 4px; /* Espaciado interno */
             border-radius: 4px; /* Bordes redondeados */
         }
+        .author-name {
+            text-align: center; /* Centrar el nombre del autor */
+            margin-top: 5px; /* Espacio arriba del nombre */
+            font-weight: bold; /* Negrita para el nombre */
+            color: #003366; /* Azul marino claro para el nombre */
+        }
         .button-container {
             text-align: center; /* Centrar los botones */
             margin-top: 20px; /* Espacio arriba de los botones */
@@ -177,6 +183,7 @@
                         Estudios de Hawthorne: Motivación influenciada por relaciones humanas y condiciones sociales.</p>
                         <p><strong>Principio:</strong> No hay principios</p>
                     </div>
+                    <div class="author-name">Elton Mayo</div>
                 </div>
                 <div class="card">
                     <img src="adm/maslow.jpg" alt="Abraham Maslow"> <!-- Cambia esta ruta por la de la imagen del autor -->
@@ -187,6 +194,7 @@
                         Pirámide de Maslow: Fisiológicas, Seguridad, Sociales, Estima y Autorrealización.</p>
                         <p><strong>Principio:</strong> No hay principio</p>
                     </div>
+                    <div class="author-name">Abraham Maslow</div>
                 </div>
             </div>
         </div>
@@ -204,6 +212,7 @@
                         Elementos del sistema: Entrada, Proceso, Salida, Retroalimentación y Ambiente.</p>
                         <p><strong>Principio:</strong> No hay principio</p>
                     </div>
+                    <div class="author-name">Ludwig von Bertalanffy</div>
                 </div>
                 <div class="card">
                     <img src="adm/contingencial.jpg" alt="Enfoque Contingencial"> <!-- Cambia esta ruta por la de la imagen del autor -->
@@ -218,19 +227,11 @@
                         3. Estructura organizativa: Debe ajustarse a condiciones externas.</p>
                         <p><strong>Principio:</strong> No hay principio</p>
                     </div>
+                    <div class="author-name">Paul Lawrence, Jay Lorsch, Joan Woodward</div>
                 </div>
             </div>
         </div>
-
-        <div class="button-container">
-            <button class="button" onclick="prevCard()">Anterior</button>
-            <button class="button" onclick="nextCard()">Siguiente</button>
-        </div>
     </div>
-
-    <script>
-        // Aquí puedes agregar la lógica para los botones "Anterior" y "Siguiente" si es necesario
-    </script>
 
 </body>
 </html>
